# lightweight-cuda-mlp

./: ActivationLayer.cuh  CMakeLists.txt  Dataset.cuh  LayerBase.cuh  LinearLayer.cuh  Network.cuh  Optimizer.cuh  README.md  Tensor.cuh  main.cu  run.ps1
